<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="8dp">


    <TextView
        android:id="@+id/textView_employee_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/employee_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_employee_name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/employee_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/textView_employee_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_employee_birthdate_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/employee_birthdate"
        android:textSize="20sp"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_employee_label" />

    <TextView
        android:id="@+id/textView_employee_birthdate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="--/--/----"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_employee_birthdate_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_employee_name" />

    <TextView
        android:id="@+id/textView_employee_admission_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/employee_admission_date"
        android:textSize="20sp"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_employee_birthdate_title" />

    <TextView
        android:id="@+id/textView_employee_admission"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="--/--/----"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_employee_admission_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_employee_birthdate" />

    <ImageView
        android:id="@+id/imageView_delete_employee"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView_employee_birthdate"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_remove_foreground" />


</androidx.constraintlayout.widget.ConstraintLayout>